--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-	"name": "reranker",
-	"scripts": {
-		"dev": "wrangler dev",
-		"deploy": "wrangler deploy --minify",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
-	},
-	"dependencies": {
-		"hono": "^4.7.11"
-	},
-	"devDependencies": {
-		"wrangler": "^4.19.1"
-	}
+  "name": "reranker",
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "tail": "wrangler tail"
+  },
+  "dependencies": {
+    "hono": "^4.7.11"
+  },
+  "devDependencies": {
+    "wrangler": "^4.19.1"
+  }
 }
